Add Position Report to default object.

--- a/RoomEscape/Config/DefaultGame.ini
+++ b/RoomEscape/Config/DefaultGame.ini
@@ -1,5 +1,8 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=1E9091B7404E5BF99EAAD5A9902FB077
+CompanyName=Damnable Vegetable Games
+CompanyDistinguishedName=Damnable Vegetable
+CopyrightNotice=Copyright Michael Shaughnessy 2016
 
 [StartupActions]
 bAddPacks=True
